--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 os:
   - linux
 
-install: pip install -r requirements.txt
+install: pip install .
 script: python test/run
 
 after_success:
